feat: (app) Enhance migration support with MySQL and PostgreSQL dependencies, additional properties, and logging improvements