@@ -2,6 +2,7 @@ package io.github.tky0065.spring_boot_migration_starter.service;
 
 import io.github.tky0065.spring_boot_migration_starter.config.MigrationProperties;
 import jakarta.persistence.Entity;
+import jakarta.persistence.Table;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,9 +11,11 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.ClassPathScanningCandidateComponentProvider;
 import org.springframework.core.type.filter.AnnotationTypeFilter;
 import org.springframework.orm.jpa.LocalContainerEntityManagerFactoryBean;
+import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
 import javax.sql.DataSource;
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -25,6 +28,7 @@ import java.util.*;
  * Service responsible for detecting changes in JPA entities and generating
  * corresponding migration files.
  */
+@Service
 public class EntityChangeDetectorService {
 
     private static final Logger logger = LoggerFactory.getLogger(EntityChangeDetectorService.class);
@@ -32,6 +36,10 @@ public class EntityChangeDetectorService {
     private final MigrationTemplateGenerator templateGenerator;
     private final MigrationProperties properties;
     private final DataSource dataSource;
+
+    private static final String DEFAULT_MIGRATION_PATH = "src/main/resources/db/migration";
+    private static final DateTimeFormatter VERSION_FORMATTER = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
+    private static final DateTimeFormatter DESCRIPTION_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd");
 
     public EntityChangeDetectorService(
             ApplicationContext applicationContext,
@@ -46,231 +54,296 @@ public class EntityChangeDetectorService {
 
     /**
      * Detect entity changes and generate migration files
+     *
+     * @return true if changes were detected and files were generated
      */
-    public void detectChangesAndGenerateMigration() {
+    public boolean detectChangesAndGenerateMigration() {
+        if (!properties.isAutoGenerateMigrations()) {
+            logger.debug("Auto-generation of migrations is disabled");
+            return false;
+        }
+
         logger.info("Detecting entity changes and generating migration files");
 
         try {
-            // 1. Get all entity classes
             Set<Class<?>> entityClasses = scanForEntityClasses();
-
-            // 2. Generate schema from entities
-            String schemaSQL = generateSchemaFromEntities(entityClasses);
-
-            if (StringUtils.hasText(schemaSQL)) {
-                // 3. Create migration file based on the migration type
-                if ("flyway".equalsIgnoreCase(properties.getType())) {
-                    generateFlywayMigration(schemaSQL);
-                } else if ("liquibase".equalsIgnoreCase(properties.getType())) {
-                    generateLiquibaseMigration(schemaSQL);
-                } else {
-                    logger.warn("Unknown migration type: {}. No migrations will be generated.", properties.getType());
-                }
-            } else {
-                logger.info("No schema changes detected or generated");
+            if (entityClasses.isEmpty()) {
+                logger.info("No entity classes found");
+                return false;
             }
 
+            logger.info("Found {} entity classes", entityClasses.size());
+
+            // Compare with database schema to detect changes
+            Map<String, Set<String>> entityChanges = detectChangesInEntities(entityClasses);
+            if (entityChanges.isEmpty()) {
+                logger.info("No entity changes detected");
+                return false;
+            }
+
+            // Generate migration files
+            boolean filesGenerated = generateMigrationFiles(entityChanges);
+
+            if (filesGenerated) {
+                logger.info("Migration files generated successfully");
+            } else {
+                logger.info("No migration files were generated");
+            }
+
+            return filesGenerated;
         } catch (Exception e) {
-            logger.error("Error detecting entity changes and generating migrations", e);
+            logger.error("Error while detecting entity changes", e);
+            return false;
         }
     }
 
     /**
-     * Scan classpath for classes annotated with @Entity
+     * Scan classpath for JPA entity classes
+     *
+     * @return Set of entity classes
      */
     private Set<Class<?>> scanForEntityClasses() {
+        logger.debug("Scanning for entity classes...");
         Set<Class<?>> entityClasses = new HashSet<>();
-        ClassPathScanningCandidateComponentProvider scanner = new ClassPathScanningCandidateComponentProvider(false);
 
-        scanner.addIncludeFilter(new AnnotationTypeFilter(Entity.class));
+        try {
+            ClassPathScanningCandidateComponentProvider scanner =
+                    new ClassPathScanningCandidateComponentProvider(false);
 
-        for (String basePackage : getEntityBasePackages()) {
-            for (BeanDefinition bd : scanner.findCandidateComponents(basePackage)) {
-                try {
-                    Class<?> entityClass = Class.forName(bd.getBeanClassName());
-                    entityClasses.add(entityClass);
-                } catch (ClassNotFoundException e) {
-                    logger.error("Failed to load entity class: {}", bd.getBeanClassName(), e);
+            scanner.addIncludeFilter(new AnnotationTypeFilter(Entity.class));
+
+            // Get base packages from EntityManagerFactory if available
+            String[] basePackages = getBasePackages();
+
+            for (String basePackage : basePackages) {
+                for (BeanDefinition bd : scanner.findCandidateComponents(basePackage)) {
+                    try {
+                        Class<?> entityClass = Class.forName(bd.getBeanClassName());
+                        entityClasses.add(entityClass);
+                        logger.debug("Found entity class: {}", entityClass.getName());
+                    } catch (ClassNotFoundException e) {
+                        logger.warn("Could not load entity class {}", bd.getBeanClassName(), e);
+                    }
                 }
             }
+        } catch (Exception e) {
+            logger.error("Error scanning for entity classes", e);
         }
 
-        logger.info("Found {} entity classes", entityClasses.size());
         return entityClasses;
     }
 
     /**
-     * Get base packages to scan for entities
+     * Get the base packages to scan for entities
+     *
+     * @return Array of base package names
      */
-    private List<String> getEntityBasePackages() {
-        List<String> basePackages = properties.getEntityBasePackages();
-        if (basePackages.isEmpty()) {
-            // Default to application's base package
-            String mainAppClass = properties.getMainApplicationClass();
-            if (StringUtils.hasText(mainAppClass)) {
-                try {
-                    Class<?> appClass = Class.forName(mainAppClass);
-                    basePackages.add(appClass.getPackageName());
-                } catch (ClassNotFoundException e) {
-                    logger.warn("Could not load main application class: {}", mainAppClass, e);
-                }
-            }
-
-            // If still empty, use a default package
-            if (basePackages.isEmpty()) {
-                basePackages.add("io.github.tky0065");
-            }
-        }
-
-        logger.info("Using entity base packages for scanning: {}", basePackages);
-        return basePackages;
-    }
-
-    /**
-     * Generate SQL schema from entity classes using Hibernate SchemaExport
-     */
-    private String generateSchemaFromEntities(Set<Class<?>> entityClasses) {
+    private String[] getBasePackages() {
         try {
-            // Utiliser les propriétés JPA de Spring pour générer le schéma
-            Path tempFile = Files.createTempFile("schema-", ".sql");
+            LocalContainerEntityManagerFactoryBean emf = applicationContext
+                    .getBean(LocalContainerEntityManagerFactoryBean.class);
 
-            Properties props = new Properties();
-            props.put("hibernate.dialect", properties.getDialect());
-            props.put("hibernate.format_sql", "true");
-            props.put("hibernate.hbm2ddl.delimiter", ";");
-            props.put("hibernate.hbm2ddl.auto", "create");
-            props.put("hibernate.hbm2ddl.scripts.action", "create");
-            props.put("hibernate.hbm2ddl.scripts.create-target", tempFile.toString());
-
-            LocalContainerEntityManagerFactoryBean factoryBean = new LocalContainerEntityManagerFactoryBean();
-            factoryBean.setDataSource(dataSource);
-            factoryBean.setPackagesToScan(getEntityBasePackages().toArray(new String[0]));
-            factoryBean.setJpaProperties(props);
-            factoryBean.afterPropertiesSet();
-
-            // Lire le contenu du fichier généré
-            String schemaSQL = Files.readString(tempFile);
-            Files.delete(tempFile);
-
-            return schemaSQL;
+            if (emf != null && emf.getPersistenceUnitInfo() != null) {
+                return new String[] { emf.getPersistenceUnitInfo().getPersistenceUnitName() };
+            }
         } catch (Exception e) {
-            logger.error("Error generating schema from entities", e);
-            return "";
+            logger.debug("Could not determine entity scan packages from EntityManagerFactory", e);
         }
+
+        // Default to base package derived from ApplicationContext
+        String mainClassName = applicationContext.getBeansWithAnnotation(
+                org.springframework.boot.autoconfigure.SpringBootApplication.class)
+                .keySet().stream()
+                .findFirst()
+                .orElse(null);
+
+        if (mainClassName != null) {
+            Class<?> mainClass;
+            try {
+                mainClass = Class.forName(mainClassName);
+                return new String[] { mainClass.getPackage().getName() };
+            } catch (ClassNotFoundException e) {
+                logger.warn("Could not find main application class", e);
+            }
+        }
+
+        // Ultimate fallback
+        return new String[] { "io.github.tky0065" };
     }
+
     /**
-     * Generate Flyway migration file with the schema SQL
+     * Detect changes in entity classes compared to database schema
+     *
+     * @param entityClasses Set of entity classes to check
+     * @return Map of entity names to sets of changed column names
      */
-    private void generateFlywayMigration(String sql) {
+    private Map<String, Set<String>> detectChangesInEntities(Set<Class<?>> entityClasses) {
+        Map<String, Set<String>> changes = new HashMap<>();
+
+        // Implementation depends on how you want to compare entities with the database
+        // This could use schema comparison tools, JPA metamodel, or Hibernate SchemaExport
+
+        // For now, we'll just add all entities as "changed" for demonstration purposes
+        for (Class<?> entityClass : entityClasses) {
+            String tableName = getTableName(entityClass);
+            changes.put(tableName, new HashSet<>());  // Empty set means the whole table
+        }
+
+        return changes;
+    }
+
+    /**
+     * Get the table name for an entity class
+     *
+     * @param entityClass The entity class
+     * @return The table name
+     */
+    private String getTableName(Class<?> entityClass) {
+        Table tableAnnotation = entityClass.getAnnotation(Table.class);
+        if (tableAnnotation != null && StringUtils.hasText(tableAnnotation.name())) {
+            return tableAnnotation.name();
+        }
+
+        // Default to class name
+        return entityClass.getSimpleName().toLowerCase();
+    }
+
+    /**
+     * Generate migration files based on detected changes
+     *
+     * @param entityChanges Map of entity changes
+     * @return true if files were generated
+     */
+    private boolean generateMigrationFiles(Map<String, Set<String>> entityChanges) {
+        if (entityChanges.isEmpty()) {
+            return false;
+        }
+
+        String migrationsPath = properties.getGeneratedMigrationsPath();
+        if (!StringUtils.hasText(migrationsPath)) {
+            migrationsPath = DEFAULT_MIGRATION_PATH;
+        }
+
+        Path directory = Paths.get(migrationsPath);
+
         try {
-            String description = "entity_schema_update";
-            Path migrationFile = templateGenerator.generateNewFlywayMigration(description, sql);
-            if (migrationFile != null) {
-                logger.info("Generated Flyway migration file at: {}", migrationFile);
+            // Create directories if they don't exist
+            Files.createDirectories(directory);
+
+            // Generate appropriate migration files based on the tool type
+            if ("flyway".equalsIgnoreCase(properties.getType())) {
+                return generateFlywayMigration(directory, entityChanges);
+            } else if ("liquibase".equalsIgnoreCase(properties.getType())) {
+                return generateLiquibaseMigration(directory, entityChanges);
             } else {
-                logger.error("Failed to generate Flyway migration file");
+                logger.warn("Unknown migration type: {}", properties.getType());
+                return false;
             }
-        } catch (Exception e) {
-            logger.error("Error generating Flyway migration", e);
+        } catch (IOException e) {
+            logger.error("Error creating migration directories", e);
+            return false;
         }
     }
 
     /**
-     * Generate Liquibase migration file with the schema SQL
+     * Generate Flyway migration SQL files
+     *
+     * @param directory Base directory for migration files
+     * @param entityChanges Map of entity changes
+     * @return true if files were generated
      */
-    private void generateLiquibaseMigration(String sql) {
+    private boolean generateFlywayMigration(Path directory, Map<String, Set<String>> entityChanges) {
+        String version = LocalDateTime.now().format(VERSION_FORMATTER);
+        String description = "update_schema_" + LocalDateTime.now().format(DESCRIPTION_FORMATTER);
+        String filename = "V" + version + "__" + description + ".sql";
+
+        Path filePath = directory.resolve(filename);
+
+        String sqlContent = templateGenerator.generateFlywayMigration(entityChanges);
+
         try {
-            // Convert SQL to Liquibase XML format
-            String changelogXml = convertSqlToLiquibaseXml(sql);
-
-            // Generate the file path
-            String timestamp = DateTimeFormatter.ofPattern("yyyyMMddHHmmss").format(LocalDateTime.now());
-            String changelogFileName = timestamp + "_entity_schema_update.xml";
-
-            // Determine the changelog directory
-            Path changelogDir = Paths.get(properties.getLiquibaseChangelogDir());
-            if (!Files.exists(changelogDir)) {
-                Files.createDirectories(changelogDir);
-            }
-
-            // Write the changelog file
-            Path changelogFile = changelogDir.resolve(changelogFileName);
-            Files.writeString(changelogFile, changelogXml);
-
-            // Update the master changelog to include this file
-            updateMasterChangelog(changelogFileName);
-
-            logger.info("Generated Liquibase changelog file at: {}", changelogFile);
-        } catch (Exception e) {
-            logger.error("Error generating Liquibase migration", e);
+            Files.writeString(filePath, sqlContent);
+            logger.info("Generated Flyway migration file: {}", filePath);
+            return true;
+        } catch (IOException e) {
+            logger.error("Error writing Flyway migration file", e);
+            return false;
         }
     }
 
     /**
-     * Convert SQL statements to Liquibase XML format
+     * Generate Liquibase migration XML files
+     *
+     * @param directory Base directory for migration files
+     * @param entityChanges Map of entity changes
+     * @return true if files were generated
      */
-    private String convertSqlToLiquibaseXml(String sql) {
-        StringBuilder xml = new StringBuilder();
-        xml.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
-        xml.append("<databaseChangeLog\n");
-        xml.append("    xmlns=\"http://www.liquibase.org/xml/ns/dbchangelog\"\n");
-        xml.append("    xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\n");
-        xml.append("    xmlns:pro=\"http://www.liquibase.org/xml/ns/pro\"\n");
-        xml.append("    xsi:schemaLocation=\"http://www.liquibase.org/xml/ns/dbchangelog\n");
-        xml.append("    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-4.25.xsd\n");
-        xml.append("    http://www.liquibase.org/xml/ns/pro\n");
-        xml.append("    http://www.liquibase.org/xml/ns/pro/liquibase-pro-4.25.xsd\">\n");
+    private boolean generateLiquibaseMigration(Path directory, Map<String, Set<String>> entityChanges) {
+        String version = LocalDateTime.now().format(VERSION_FORMATTER);
+        String filename = "changelog-" + version + ".xml";
 
-        xml.append("    <changeSet id=\"").append(UUID.randomUUID()).append("\" author=\"spring-migration-starter\">\n");
-
-        // Split SQL statements and add them as individual SQL tags
-        String[] statements = sql.split(";");
-        for (String statement : statements) {
-            statement = statement.trim();
-            if (!statement.isEmpty()) {
-                xml.append("        <sql>").append(statement).append("</sql>\n");
-            }
+        // For Liquibase, we typically need a changelog directory structure
+        Path changelogDir = directory.resolve("changelog");
+        try {
+            Files.createDirectories(changelogDir);
+        } catch (IOException e) {
+            logger.error("Error creating Liquibase changelog directory", e);
+            return false;
         }
 
-        xml.append("    </changeSet>\n");
-        xml.append("</databaseChangeLog>\n");
+        Path filePath = changelogDir.resolve(filename);
 
-        return xml.toString();
+        String xmlContent = templateGenerator.generateLiquibaseMigration(entityChanges);
+
+        try {
+            Files.writeString(filePath, xmlContent);
+            logger.info("Generated Liquibase migration file: {}", filePath);
+
+            // Also update the master changelog if it exists
+            updateLiquibaseMasterChangelog(directory, filename);
+
+            return true;
+        } catch (IOException e) {
+            logger.error("Error writing Liquibase migration file", e);
+            return false;
+        }
     }
 
     /**
-     * Update the master changelog to include the new changelog file
+     * Update the Liquibase master changelog to include the new changelog file
+     *
+     * @param directory Base directory for migration files
+     * @param newChangelogFilename The filename of the new changelog
      */
-    private void updateMasterChangelog(String changelogFileName) throws IOException {
-        Path masterChangelogPath = Paths.get(properties.getLiquibaseMasterChangelog());
+    private void updateLiquibaseMasterChangelog(Path directory, String newChangelogFilename) {
+        Path masterChangelogPath = directory.resolve("db.changelog-master.xml");
 
         // Create master changelog if it doesn't exist
         if (!Files.exists(masterChangelogPath)) {
-            String masterChangelogContent = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                    "<databaseChangeLog\n" +
-                    "    xmlns=\"http://www.liquibase.org/xml/ns/dbchangelog\"\n" +
-                    "    xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\n" +
-                    "    xsi:schemaLocation=\"http://www.liquibase.org/xml/ns/dbchangelog\n" +
-                    "    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-4.25.xsd\">\n\n" +
-                    "</databaseChangeLog>";
-
-            Files.createDirectories(masterChangelogPath.getParent());
-            Files.writeString(masterChangelogPath, masterChangelogContent);
+            try {
+                String masterTemplate = templateGenerator.generateLiquibaseMasterChangelog();
+                Files.writeString(masterChangelogPath, masterTemplate);
+                logger.info("Created Liquibase master changelog: {}", masterChangelogPath);
+            } catch (IOException e) {
+                logger.error("Error creating Liquibase master changelog", e);
+                return;
+            }
         }
 
-        // Read master changelog
-        String masterContent = Files.readString(masterChangelogPath);
+        // Add include for the new changelog file
+        try {
+            String masterContent = new String(Files.readAllBytes(masterChangelogPath));
+            String includeEntry = String.format("\t<include file=\"changelog/%s\" relativeToChangelogFile=\"true\"/>",
+                    newChangelogFilename);
 
-        // Add include if not already present
-        String includeTag = "<include file=\"" + changelogFileName + "\"/>";
-        if (!masterContent.contains(includeTag)) {
             // Insert before the closing tag
-            int closingTagIndex = masterContent.lastIndexOf("</databaseChangeLog>");
-            if (closingTagIndex > 0) {
-                StringBuilder updatedContent = new StringBuilder(masterContent);
-                updatedContent.insert(closingTagIndex, "    " + includeTag + "\n\n    ");
-                Files.writeString(masterChangelogPath, updatedContent.toString());
-            }
+            String updatedContent = masterContent.replace("</databaseChangeLog>",
+                    includeEntry + System.lineSeparator() + "</databaseChangeLog>");
+
+            Files.writeString(masterChangelogPath, updatedContent);
+            logger.info("Updated Liquibase master changelog with new include");
+        } catch (IOException e) {
+            logger.error("Error updating Liquibase master changelog", e);
         }
     }
 }
